clang/test/BSC/Negative/Ownership/RuleCheck/own_borrow_conflict/own_borrow_conflict.cbs
// RUN: %clang_cc1 -verify %s

void test(int *_Owned _Borrow p) { // expected-error {{cannot combine '_Owned' and '_Borrow' qualifiers on the same type}}
  int *_Owned _Borrow q = p; // expected-error {{cannot combine '_Owned' and '_Borrow' qualifiers on the same type}}
  int *_Owned _Borrow *pp =p; //#1
}
// expected-error@#1 {{cannot combine '_Owned' and '_Borrow' qualifiers on the same type}}
// expected-error@#1 {{incompatible _Owned types, cannot cast 'int *_Owned _Borrow' to 'int *_Owned _Borrow *'}}
